--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "seed": "cd database/seeds && node index.js"
   },
   "devDependencies": {
-    "concurrently": "^4.1.0"
+    "concurrently": "^4.1.0",
+    "nodemon": "^2.0.7"
   },
   "author": "",
   "license": "ISC",
