--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lodash": "^4.17.19",
     "moment": "^2.27.0",
     "mongoose": "^5.9.25",
+    "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "validator": "^13.1.1"
