--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@material-ui/lab": "^4.0.0-alpha.58",
     "antd": "^4.15.2",
     "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
