--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.19",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.13.1",
+    "react-custom-roulette": "^1.1.8",
     "react-dom": "^16.13.1",
     "react-materialize": "^3.9.2",
     "react-router-dom": "^5.2.0",
