--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "faker": "^4.1.0",
+    "if-env": "^1.0.4",
     "lodash": "^4.17.19",
     "moment": "^2.27.0",
     "mongoose": "^5.12.7",
