--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@material-ui/styles": "^4.11.4",
     "antd": "^4.15.2",
+    "aws-sdk": "^2.902.0",
     "axios": "^0.21.1",
-    "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
@@ -42,6 +43,7 @@
     "moment": "^2.27.0",
     "mongoose": "^5.12.7",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "validator": "^13.1.1"
