changing from html link tag to react router link

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
-BASE_URL=http://localhost:8080
-MONGODB_URI=mongodb://localhost:27017/test
+BASE_URL=
+MONGODB_URI=
 
-SESSION_SECRET="Your Session Secret goes here"
+SESSION_SECRET=
+
+aws_access_key_id=
+aws_secret_access_key=
